# huggingface-dataset-map

./: .env.example  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: filter_panel.html  index.html  methodology.html
experiments/: cluster_extracted_taxonomy.py  evoc_cluster_for_taxonomy.py  evoc_cluster_signatures.py  extract_structured_fields_v1.py  extract_structured_fields_v2.py  extract_structured_fields_v3.py  extract_structured_full.py  rank_signal_analysis.py  rank_signal_characterization.py  rerun_validation_sample.py  summarize_cards_v1.py  taxonomy_gap_analysis.py  taxonomy_v2_proposed.json  taxonomy_v3_proposed.json
pipeline/: 00_fetch_datasets.py  01_embed_cards.py  02_reduce_umap.py  03_label_topics.py  04_extract_structured.py  04_visualize.py  04b_summarize_cards.py  05_visualize.py  config.py  taxonomy.json
tests/: test_config.py  test_fetch_datasets.py
